# haskell-realworld-example

./: .gitignore  Dockerfile  LICENSE  README.md  default.nix  devenv.nix  docker-compose.yml  ops.nix  pkgs.nix  realworld.cabal  realworld.nix  shell.nix
app/: Main.hs
migrations/: 01.sql
nix/: beam-core.nix  beam-migrate.nix  beam-postgres.nix  generic-lens.nix  inspection-testing.nix
src/: Api.hs  Database.hs  Lib.hs  Password.hs  Prelude.hs  Rio.hs  SwaggerHelpers.hs  Types.hs
test/: Spec.hs
